@@ -1,3 +1,13 @@
+2012-12-17  Julien Chaffraix  <jchaffraix@webkit.org>
+
+        Unreviewed unit test skipping.
+
+        Filed https://bugs.webkit.org/show_bug.cgi?id=105253 to re-enable them.
+
+        * TestWebKitAPI/Tests/WTF/MathExtras.cpp:
+        (TestWebKitAPI):
+        (TestWebKitAPI::TEST):
+
 2012-12-17  Dean Jackson  <dino@apple.com>
 
         Unreviewed. Add Silvia Pfeiffer to contributor list.
